# tooler

./: .event.json  .gitignore  .markdownlint.yml  .yamllint  AGENTS.md  ARCHITECTURE.md  Cargo.toml  INSTALL.md  LICENSE  README.md  ROADMAP.md  build.rs  demo.tape  install-rust.sh  install.ps1  install.sh  pyproject.toml  requirements.txt  test_version.rs  tooler.py
.github/workflows/: ci.yml  push.yml  release.yml  smoke-test.yml
scripts/: gen-demo.sh  gen_demo.js  pre-push
src/: cli.rs  config.rs  download.rs  install.rs  main.rs  platform.rs  tests.rs  tool_id.rs  types.rs
src/install/: github.rs  mod.rs
tests/: common.rs  e2e_examples.rs  integration_tests.rs  recovery_tests.rs  test_version.rs
