[package]
name = "tooler"
version = "0.1.1"
edition = "2021"
description = "A CLI tool manager for GitHub Releases"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/tooler"

[dependencies]
reqwest = { version = "0.11", features = [
  "json",
  "stream",
  "rustls-tls",
], default-features = false }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
indicatif = "0.17"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
semver = "1.0"
walkdir = "2.0"
xz2 = "0.1"
futures-util = "0.3"
tempfile = "3.0"
console = "0.16.2"
